@@ -1,4 +1,5 @@
 Development
+    Track resumable media in database
     Force a resize if we know the size from the database when opening a file
     Apply recommended fix from Issue #658
     Prevent crash when loading large playlist the first time
